# autopp-diff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
lib/: CMakeLists.txt
lib/include/nodeflow/: basic_operator.h  node.h  operator.h
lib/src/: node.cpp
source/nodeflow/: CMakeLists.txt  creator.h  error.h  error.hpp  ex_parser.hpp  ex_scanner.h  ex_scanner.hpp  ex_token.h  ex_token.hpp  graph.h  graph.hpp  node.h  node.hpp  nodeflow.h  nodeflow.hpp  operator.h  operator.hpp  string_util.h
source/nodeflow/expression/: ex_parser.cpp  ex_parser.hpp  ex_scanner.cpp  ex_scanner.hpp  ex_token.hpp  ex_tree.hpp
source/nodeflow/graph/: graph.cpp  graph.hpp  node.cpp  node.hpp  operator.hpp  string_util.hpp
source/nodeflow/parser/: ex_parser.cpp  ex_parser.hpp  ex_scanner.cpp  ex_scanner.hpp  ex_token.hpp
source/nodeflow/util/: error.hpp  print.hpp
src/: function.cpp  function.h  main.cpp  node.cpp  node.h  operator.cpp  tensor.cpp  tensor.h
test/: CMakeLists.txt  eval.cpp  expression_parser.cpp  getAllNode.cpp  graph.cpp  regression1.cpp  stream.cpp  stream.cpp~  sub_graph.cpp  test_main.cpp
tests/: test1.cpp
